improvements for jdk 9